@@ -1,6 +1,6 @@
 Package: arm
-Version: 1.3-07
-Date: 2010-10-24
+Version: 1.3-08
+Date: 2010-11-20
 Title: Data Analysis Using Regression and Multilevel/Hierarchical Models
 Author: Andrew Gelman <gelman@stat.columbia.edu>,
         Yu-Sung Su <ys463@columbia.edu>,
